[package]
name = "entropy-test"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
nix = "0.26.1"
clap = { version = "4.0.29", features = ["derive"] }
ctrlc = "3.2.3"
rand = "0.8.5"
spmc = "0.3.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
histogram = "0.6.9"

[build-dependencies]
bindgen = "0.63.0"
